fix: wrong font path

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -12,7 +12,7 @@ main {
 }
 @font-face {
   font-family: 'Bravura';
-  src: url('/fonts/Bravura.woff') format('woff');
+  src: url('/public/fonts/Bravura.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
